apps/primal/bluey/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: primal
spec:
  selector:
    matchLabels:
      app: primal
  template:
    metadata:
      labels:
        app: primal
    spec:
      containers:
      - image: docker.io/babyraptor/primal:sha-91e01c9
        imagePullPolicy: IfNotPresent
        name: primal
        ports:
        - containerPort: 8501
          protocol: TCP
      restartPolicy: Always
