apps/primal/bluey/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: primal
  name: primal
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 8501
  selector:
    app: primal
  type: ClusterIP
