apps/primal/bluey/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: primal
  namespace: primal
spec:
  ingressClassName: nginx
  rules:
    - host: primal.babyvelociraptor.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: primal
                port:
                  name: web
